# obuild-query

./: .gitignore  README.md  pyproject.toml
obuild_query/: __init__.py
